完成前后端连接

--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -76,7 +76,7 @@
                 <!-- notificatoin dropdown start-->
                 <ul class="nav pull-right top-menu">
                     <li>
-                        <a href='https://github.com'>
+                        <a href='https://github.com/prayerxy/HDFS'>
                             <i class="fa fa-github" aria-hidden="true"> open Github</i>
                         </a>
                     </li>
