--- a/demo/templates/entity.html
+++ b/demo/templates/entity.html
@@ -204,7 +204,7 @@
 
 
             function handleUpload() {
-                showProgressBar();
+                // showProgressBar();
                 uploadFile();
             }
         </script>
